Custom_VPC/vpc.tf

resource "aws_vpc" "vpc" {
    cidr_block = "10.0.0.0/16"
    instance_tenancy = "default"
    enable_dns_support = true
    enable_dns_hostnames = true

    tags = {
        Name = "vpc-${var.env}"
        Environment = var.env
    }
}
